force-app/main/default/objects/API_Auth_Detail__c/API_Auth_Detail__c.object-meta.xml
<CustomObject>
    <label>API Auth Detail</label>
    <nameField>
        <displayFormat>API-{000}</displayFormat>
        <label>API Auth Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>API Auth Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>