force-app/main/default/objects/API_Auth_Detail__c/fields/Auth_Code__c.field-meta.xml
<CustomField>
    <fullName>Auth_Code__c</fullName>
    <label>Auth Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>