force-app/main/default/objects/API_Auth_Detail__c/fields/GrantType__c.field-meta.xml
<CustomField>
    <fullName>GrantType__c</fullName>
    <label>GrantType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>