force-app/main/default/objects/API_Auth_Detail__c/fields/Refresh_Token_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Token_Expiry__c</fullName>
    <label>Refresh Token Expiry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>