force-app/main/default/objects/API_Auth_Detail__c/fields/Type_Of_Credential__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Credential__c</fullName>
    <label>Type Of Credential</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QB Credential</fullName>
                <default>true</default>
                <label>QB Credential</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>